Improved line splitting and scp button